@@ -23,6 +23,7 @@ Version 1.5.4+svn:
    * Various minor cleanups and refactoring of the new widgets.
    * Added a new scroll label widget.
    * Allowed usage of wildcards (? and *) in friend and ignore lists.
+   * Allowed usage of lists in /friend, /ignore and /remove commands.
  * WML engine:
    * New command, [store_time_of_day], makes it possible to store ToD info
      in a WML array/container.
